@@ -21,6 +21,7 @@ LEGEND
   [-] When the replication of server archive is enabled than the ongoing chat could not completely copied to a local disk
   [-] The main status could be displayed as "offline" even when one of the accounts is connected
   [-] The socks5-proxy on native server has not been automatically added to available proxy list
+  [-] Triggering of avtostatus rule could lead to connect of offline accounts
 
 
 v1.0.1
